// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package hello_world.v1;

import "hello-world/v1/echo.proto";

option go_package = "git.company.com/examples/hello-world/go/pkg/hello-world/v1;hello_world";
option java_multiple_files = true;
option java_outer_classname = "HelloWorldProto";
option java_package = "org.mojo-lang.hello_world.v1";

message GetEchoRequest {
    string name = 1;
}

service HelloWorld {
    rpc get_echo(GetEchoRequest) returns (Echo);
}